added a about pamela index.html

--- a/index.html
+++ b/index.html
@@ -3,24 +3,20 @@
 <head>
 	<meta charset="UTF-8"/>
 	<title>About Pamela</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Pamela's Schooling</h1>
-	<img src="https://ca.slack-edge.com/T053NFY3R-UMUKW27BM-7cbacbb14016-48">
-	<div>
-		<ul>
-			<li>Born and raided in Albuquerque, NM</li>
-			<li>Graduated from Highland High School</li>
-			<li>Attended CNM from 1996-1998 for Electronics Technologies</li>
-			<li>Attended CNM from 2002-2004 for Computer Information Systems & Multimedia</li>
-			<li>Graduated from Brown Mackie College in 2015 AAS in Information Technology</li>
-			<li>I love to sing and play guitar</li>
-			<li>I met my husband taking dancing lessons at Arthur Murray Studio</li>
-			<li>Won two  first place throphies for a dancing competition</li>
+<h1>About Pamela</h1>
+<img src="Queen-Elizabeth-I-Cate-Blanchett-in-Elizabeth-The-Golden-Age-3.jpg" height="1200" width="800"/>
+<ul>
+			<li>Born and raised in Winterfell.</li>
+			<li>Graduated from The North.</li>
+			<li>Learned how to juggle in Clown College.</li>
+			<li>Wants to move to Kings Landing</li>
 		</ul>
 	</div>
-<h2>Fun Fact</h2>
-		<p>Dolly Parton is my favorite singer and I got a phone call from her when I was 12 years old because of a letter I wrote to her that included my phone number.</p>
-
+<h2><u>Fun Fact</u></h2>
+		<p>Attended the Red Wedding.</p>
+<img src="bookstores-use-dark-humor-to-cope-with-red-wedding-1-29513-1370455768-0_big.jpg" height="236" width="355"/>
 </body>
 </html>
