added a about pamela index.html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <h1>About Pamela</h1>
 <img src="Queen-Elizabeth-I-Cate-Blanchett-in-Elizabeth-The-Golden-Age-3.jpg" height="1200" width="800"/>
 <ul>
-			<li>Born and raised in Winterfell.</li>
-			<li>Graduated from The North.</li>
-			<li>Learned how to juggle in Clown College.</li>
-			<li>Wants to move to Kings Landing</li>
+			<li>Grew up in Albq.</li>
+			<li>Graduated Brown Mackie 2015 AAS info Tech.</li>
+			<li>Met her Husband taking dancing lessons.</li>
+			<li>She loves singing and playing guitar.</li>
+			<li>She once received a phone call from Dolly Parton</li>
 		</ul>
 	</div>
 <h2><u>Fun Fact</u></h2>
