added a about pamela index.html

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <ul>
 			<li>Grew up in Albq.</li>
 			<li>Graduated Brown Mackie 2015 AAS info Tech.</li>
-			<li>Met her Husband taking dancing lessons.</li>
-			<li>She loves singing and playing guitar.</li>
+			<li>Met her Husband taking ballet lessons.</li>
+			<li>She loves singing and playing hermonica.</li>
 			<li>She once received a phone call from Dolly Parton</li>
 		</ul>
 	</div>
